[gd_scene load_steps=3 format=3 uid="uid://daej5ouv6hbf7"]

[ext_resource type="Script" path="res://scripts/player/player_ui.gd" id="1_pse61"]

[sub_resource type="LabelSettings" id="LabelSettings_eomoh"]
font_size = 35
shadow_size = 11
shadow_color = Color(0, 0, 0, 0.360784)
shadow_offset = Vector2(0, 0)

[node name="PlayerUI" type="CanvasLayer"]
script = ExtResource("1_pse61")

[node name="HealthRect" type="ColorRect" parent="."]
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -54.0
offset_right = 172.0
grow_vertical = 0
color = Color(0.141176, 0.141176, 0.141176, 0.392157)

[node name="HealthText" type="Label" parent="HealthRect"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
text = "100"
label_settings = SubResource("LabelSettings_eomoh")
horizontal_alignment = 1
vertical_alignment = 1

[node name="AmmoRect" type="ColorRect" parent="."]
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -172.0
offset_top = -54.0
grow_horizontal = 0
grow_vertical = 0
color = Color(0.141176, 0.141176, 0.141176, 0.392157)

[node name="AmmoText" type="Label" parent="AmmoRect"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
text = "30/120"
label_settings = SubResource("LabelSettings_eomoh")
horizontal_alignment = 1
vertical_alignment = 1
